# kindle-highlights-md

./: ARCHITECTURE.md  My Clippings.txt  README.md  TUTORIAL.md  kindle2md.py  kindle_highlights.py  kindle_to_markdown.py  pyproject.toml  sample_clippings.txt  sample_clippings_highlights.md  test_kindle2md.py
kindle_highlights_md/: cli.py
kindle_highlights_to_markdown/: cli.py  markdown_generator.py  parser.py
output/: Atomic Habits _James Clear_.md  The Pragmatic Programmer_ Your Journey to Mastery _Andrew Hunt_.md
tests/: mock_clippings.txt  test_cli.py  test_kindle_highlights.py
