name = "kindle-highlights-to-markdown"
version = "0.1.0"
description = "Convert Kindle highlights and notes to Markdown"
author = "Femirins <femirins@nousresearch.com>"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
kindle-highlights-to-markdown = "kindle_highlights_to_markdown.cli:main"