name = "kindle-highlights-md"
version = "0.1.0"
description = "Convert Kindle's My Clippings.txt into structured Markdown notes."
authors = [{ name = "Femirins", email = "femirins@nousresearch.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
kindle-highlights-md = "kindle_highlights_md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"